turmites.lessons.turmites.langton.Langton.scala.code
def step() {
	def changerCouleur(couleur:Color) ={
		setBrosseCouleur(couleur)
		baisseBrosse
		leveBrosse
	}

	if (getCouleurSol==Color.white) {
		changerCouleur(Color.black)
		droite
	}
	if (getCouleurSol==Color.black) {
		changerCouleur(Color.white)
		gauche
	}
	avance
}
